--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Environment variables (contains API keys)
-.env
-
 # Python
 __pycache__/
 *.py[cod]
@@ -11,25 +8,54 @@ env/
 venv/
 ENV/
 build/
+develop-eggs/
 dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
 *.egg-info/
+.installed.cfg
+*.egg
+
+# Environment variables
+.env
+.env.local
 
 # Data files (too large for git)
-data/images/
-data/*.json
+data/
+db/
+*.db
+*.json
 
-# Database files
-db/*.db
-*.sqlite
-*.sqlite3
-
-# IDE
+# IDEs
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
+# Logs
+*.log
+
+# Temporary files
+remove_images.py
+sync_metadata.py
+cleanup_images.py
+ids_to_remove.txt
+*_backup.json
+*_old.py
+
 # OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
